--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
 		<div class="button"><span>开始</span></div>
 		<div class="name"><span id='ko'>随机名称</span></div>
 	</div>
-	<div class="tips">如果您点击超过十次还没有选到满意的菜单，也许在你心里面早已有答案。遵循自己的内心吧~！</div>
+	<div class="tips">如果您点击超过十次还没有选到满意的菜单，<br>也许在你心里面早已有答案。遵循自己的内心吧~！</div>
 
 <script>
     a1=['烩面','麻辣烫','酸辣粉','食堂','煲仔饭','鱼香肉丝盖饭','鸡公煲','热干面','蒸饺+混沌','土豆粉','拌面','汉堡+炸鸡','烩菜','羊肉泡馍','煎饼果子','螺蛳粉','米线','肠粉','凉皮','擀面皮','爆肚','肉夹馍','炒饭','饭团','卤肉饭','渔粉','焖面','煎包','粥+包子'] 
